--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.7",
+    "@web3auth/web3auth": "^0.7.0",
+    "ethers": "^5.6.2",
+    "magic-sdk": "^8.1.0",
+    "moment": "^2.29.1",
+    "moralis": "^1.5.8",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
+    "react-simple-hook-modal": "^1.1.0",
+    "react-spinners": "^0.12.0",
+    "web3uikit": "^0.1.110"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
